# soft_chatty

./: README.md  main.py  pyproject.toml  run_client.py  run_server.py
app/: base.py
app/core/: config.py  logging.py  mongo.py
app/domain/: channel.py  channel_user.py  message.py  messaging_user.py  response_model.py  socket_model.py
app/repository/: channel_repository.py  channel_user_repository.py  message_repository.py  messging_user_repository.py
app/router/: channel_router.py  message_router.py  messaging_user_router.py
app/service/: channel_user_service.py  messaging_user_service.py
app/socket/: base.py  socket_emitter.py  socket_event_handler.py
client/: base.py
client/core/: config.py  exceptions.py
client/internal/: server_requester.py
client/sevice/: channel_service.py  message_service.py
client/socket/: base.py  socket_emitter.py  socket_event_handler.py  store.py
client/util/: async_util.py
config/: local.env
config/client/: local.env
config/server/: local.env
