[tool.poetry]
name = "soft-chatty"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.105.0"}



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
