[tool.poetry]
name = "soft-chatty"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.105.0"}
python-socketio = {extras = ["all"], version = "^5.11.4"}
websocket-client = "^1.8.0"
aiohttp = "^3.10.5"
mongomock-motor = "^0.0.31"
motor = "^3.5.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
